--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,8 @@ body {
 .masthead {
   padding: 6em 0;
   background-image: url('../img/code.jpg');
+  height: 300px;
+  background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
 }
